refactor: reformatted and refactored code